# fair_scoring_site

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  pytest.ini  requirements-prod.txt  requirements-test.txt  requirements.txt
.github/workflows/: pre-commit.yaml  test-suite.yaml
apps/awards/: admin.py  apps.py  logic.py  models.py  tests.py
apps/fair_categories/: admin.py  apps.py  models.py
apps/fair_categories/fixtures/: divisions_categories.json  ethnicities.json
apps/fair_projects/: admin.py  apps.py  forms.py  logic.py  models.py  tests.py  utils.py  views.py
apps/judges/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/rubrics/: admin.py  apps.py  constants.py  fixtures.py  forms.py  models.py  signals.py  tests.py
assets/: alignment.css
awards/: __init__.py  admin.py  apps.py  logic.py  models.py  tests.py
awards/migrations/: 0001_initial.py  0002_auto_20161111_1108.py  0003_auto_20161212_2107.py  0004_alter_award_exclude_awards_alter_award_id_and_more.py
fair_categories/: admin.py  apps.py  models.py
fair_categories/fixtures/: divisions_categories.json  ethnicities.json
fair_categories/migrations/: 0001_initial.py  0002_subcategory_abbreviation.py  0003_ethnicity.py  0004_auto_20160807_1402.py  0005_auto_20190104_2234.py  0006_alter_category_id_alter_division_id_and_more.py
fair_projects/: admin.py  apps.py  forms.py  logic.py  models.py  signals.py  tests.py  urls.py  views.py
fair_projects/fixtures/: projects_small.json  schools.json  teachers.json
fair_projects/migrations/: 0001_initial.py  0002_auto_20160321_2223.py  0003_auto_20160323_2121.py  0004_auto_20160813_2104.py  0005_judginginstance_response.py  0006_auto_20161109_2113.py  0007_project_requires_attention.py  0008_project_judge_notes.py  0009_judginginstance_locked.py  0010_alter_student_options_alter_teacher_options_and_more.py
fair_projects/templatetags/: dictkey.py  widgettype.py
fair_scoring_site/: admin.py  logic.py  settings.py  settings_common.py  settings_dev.py  settings_prod.py  settings_test.py  signals.py  tests.py  urls.py  views.py  wsgi.py
judges/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
judges/fixtures/: judge_educations.json  judges.json
judges/migrations/: 0001_initial.py  0002_auto_20160320_1211.py  0003_auto_20160320_1236.py  0004_auto_20160320_1532.py  0005_auto_20160320_1539.py  0006_auto_20160321_2224.py  0007_auto_20160323_2120.py  0008_auto_20160323_2121.py  0009_auto_20160813_2104.py  0010_auto_20160813_2302.py  0011_auto_20160813_2316.py  0012_auto_20160816_1917.py  0013_auto_20160817_1847.py  0014_auto_20190104_2234.py  0015_alter_judge_options_alter_judge_phone_and_more.py
rubrics/: admin.py  apps.py  fixtures.py  forms.py  models.py  signals.py  tests.py
rubrics/fixtures/: rubric.json
rubrics/migrations/: 0001_initial.py  0002_auto_20160813_2316.py  0003_auto_20160817_1847.py  0004_question_required.py  0005_auto_20161102_2142.py  0006_alter_choice_id_alter_question_id_and_more.py
static/: alignment.css  print.css
templates/: base.html  horizontal_field.html  horizontal_form.html  navbar.html
templates/import_export/: change_list_import_export.html
templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
(+142 files in other folders)
