[tool.poetry]
name = "fair_scoring_site"
version = "1.1.0"
description = "Score science fair projects"
authors = ["Kenny Baskett <kbaskett248@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1,<4.2"
argon2-cffi = "^21.3"
django-bootstrap3 = "^22.2"
django-constance = "^2.9"
django-import-export = "^3.0"
django-picklefield = "^3.1"
django-widget-tweaks = "^1.4"
hypothesis = "^6.72"
coverage = "^7.2"
mysqlclient = { version = "^2.1", optional = true }
mistletoe = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
django-debug-toolbar = "^3.8"
model-bakery = "^1.11.0"
pytest-cov = "^4.0"
pytest-django = "^4.5"
python-dateutil = "^2.8"

[tool.poetry.extras]
mysql = ["mysqlclient"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
python_files = "tests.py test_*.py *_tests.py"
DJANGO_SETTINGS_MODULE = "fair_scoring_site.settings_test"

[tool.bandit]
exclude_dirs = [
    "apps/**/tests",
    "apps/**/tests.py",
    "fair_scoring_site/settings_test.py",
    "fair_scoring_site/settings_dev.py",
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = "C0114, C0115, C0116, R0801, R0903, E0401, W0511"
good-names = "setUpClass, setUp, assertHTMLEqual"
