[tool.poetry]
name = "fair_scoring_site"
version = "1.1.0"
description = "Score science fair projects"
authors = ["Kenny Baskett <kbaskett248@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1,<4.2"
argon2-cffi = "^21.3"
django-bootstrap3 = "^22.2"
django-constance = "^2.9"
django-import-export = "^3.0"
django-picklefield = "^3.1"
django-widget-tweaks = "^1.4"
hypothesis = "^6.72"
coverage = "^7.2"
mysqlclient = { version = "^2.1", optional = true }
mistletoe = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
django-debug-toolbar = "^3.8"
model-bakery = "^1.11.0"
pytest-cov = "^4.0"
pytest-django = "^4.5"
python-dateutil = "^2.8"

[tool.poetry.extras]
mysql = ["mysqlclient"]

[tool.pytest.ini_options]
python_files = "tests.py test_*.py *_tests.py"
DJANGO_SETTINGS_MODULE = "fair_scoring_site.settings_test"

[tool.ruff]
select = ["E", "F", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4"]
extend-exclude = [
    "migrations"
]
ignore = ["COM812"]
ignore-init-module-imports = true

[tool.ruff.per-file-ignores]
"test*.py" = ["N", "S", "FBT"]
"**/tests/**/*.py" = ["N", "S", "FBT"]
"fair_scoring_site/settings_test.py" = ["S"]
"fair_scoring_site/settings_dev.py" = ["S"]
