[tool.poetry]
name = "fair_scoring_site"
version = "1.1.0"
description = "Score science fair projects"
authors = ["Kenny Baskett <kbaskett248@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1,<4.2"
argon2-cffi = "^21.3"
django-bootstrap3 = "^23.1"
django-constance = "^2.9"
django-import-export = "^3.0"
django-picklefield = "^3.1"
django-widget-tweaks = "^1.4"
hypothesis = "^6.81"
coverage = "^7.2"
mysqlclient = { version = "^2.1", optional = true }
mistletoe = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
django-debug-toolbar = "^4.0"
model-bakery = "^1.11.0"
pytest-cov = "^4.0"
pytest-django = "^4.5"
python-dateutil = "^2.8"

[tool.poetry.extras]
mysql = ["mysqlclient"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
python_files = "tests.py test_*.py *_tests.py"
DJANGO_SETTINGS_MODULE = "fair_scoring_site.settings_test"
